--- a/tools/android/packaging/xbmc/src/org/xbmc/kodi/Main.java.in
+++ b/tools/android/packaging/xbmc/src/org/xbmc/kodi/Main.java.in
@@ -2,6 +2,7 @@ package org.xbmc.@APP_NAME_LC@;
 
 import android.app.NativeActivity;
 import android.content.Intent;
+import android.media.AudioManager;
 import android.os.Bundle;
 import android.util.Log;
 import android.view.View;
@@ -9,6 +10,8 @@ import android.graphics.PixelFormat;
 
 public class Main extends NativeActivity 
 {
+  private XBMCSettingsContentObserver mSettingsContentObserver;
+
   native void _onNewIntent(Intent intent);
 
   public Main() 
@@ -20,6 +23,10 @@ public class Main extends NativeActivity
   public void onCreate(Bundle savedInstanceState) 
   {
     super.onCreate(savedInstanceState);
+    setVolumeControlStream(AudioManager.STREAM_MUSIC);
+      
+    mSettingsContentObserver = new XBMCSettingsContentObserver(this,new Handler());
+    getApplicationContext().getContentResolver().registerContentObserver(android.provider.Settings.System.CONTENT_URI, true, mSettingsContentObserver );
   }
 
   @Override
@@ -66,4 +73,10 @@ public class Main extends NativeActivity
     }
   }
 
+  @Override
+  public void onDestroy()
+  {
+    getApplicationContext().getContentResolver().unregisterContentObserver(mSettingsContentObserver);
+    super.onDestroy();
+  }
 }
