--- a/tools/android/packaging/Makefile.in
+++ b/tools/android/packaging/Makefile.in
@@ -4,7 +4,8 @@ OBJS = libcurl.so \
   librtmp.so \
   libplist.so libshairplay.so \
   libxbogg.so libxbvorbis.so libxbvorbisfile.so libxbmpeg2.so \
-  libxbmpeg2convert.so libnfs.so libass.so libbluray.so
+  libxbmpeg2convert.so libnfs.so libass.so \
+  libbluray.so libsmbclient.so
 
 PLATFORM_OBJS =
 EXCLUDED_ADDONS = screensaver.rsxs.euphoria visualization.dxspectrum visualization.milkdrop visualization.projectm
